# LC-CurveModel

./: .gitignore  CMakeLists.txt  README.md
camera/: camera.hpp
config/: model.yaml
fileio/: output.hpp
line/: curve.hpp
model/: CMakeLists.txt  test.cpp
model/include/: curve_factor.h  curve_factor_auto.h  curve_modeling.h
model/src/: curve_factor.cpp  curve_modeling.cpp
simulation/: CMakeLists.txt
simulation/config/: cam0.yaml  points.yaml
simulation/data/: lidar_points.txt  points.txt  ref_points.txt
simulation/include/: curve_simulation.hpp  image_simulation.hpp  points_simulation.hpp
simulation/src/: curve_detection.cpp  image_generation.cpp  points_generation.cpp
tools/: plot_3d_points.py
